--- a/apps/web/src/pages/Home.css
+++ b/apps/web/src/pages/Home.css
@@ -190,3 +190,8 @@
   color: #aaffdd;
   border-color: #aaffdd;
 }
+
+.palette-actions .design-button:hover:not(:disabled) {
+  color: #aaffdd;
+  border-color: #aaffdd;
+}
